Fix - Low contrast font in History form when using Firefox Browser in Dark Mode #5599 (#3020)

--- a/ui/scss/src/_dark-mode.scss
+++ b/ui/scss/src/_dark-mode.scss
@@ -583,4 +583,17 @@ $dark-mode-input-border-focus: #007aff;
   .cstudio-form-control-asset-picker-preview-block {
     background: none;
   }
+
+  // diff view
+  .yui-skin-cstudioTheme.skin-diff {
+    color: $dark-mode-font-color;
+
+    span.diff-html-removed {
+      background-color: #f24d4d;
+    }
+
+    span.diff-html-added {
+      background-color: #00a400;
+    }
+  }
 }
